[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calchemy"
version = "0.1.0"
description = "A declarative DSL for DataFrame column calculations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "CoderMoray", email = "morayliang@gmail.com"},
]
keywords = [
    "dataframe",
    "dsl",
    "calculation",
    "pandas",
    "column",
    "expression",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/CoderMoray/Calchemy"
Repository = "https://github.com/CoderMoray/Calchemy"
Issues = "https://github.com/CoderMoray/Calchemy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["calchemy*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["calchemy"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
